// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle field should render autoFocused input 1`] = `
<FieldTemplate
  description="my text input hint"
  descriptionId="myForm-description"
  errorId="myForm-error"
  errorMessage="My error message"
  isValid={true}
  required={true}
>
  <Toggle
    aria-describedby="myForm-description myForm-error"
    aria-invalid={false}
    aria-required={true}
    autoFocus={true}
    checked={true}
    className="switch checkbox"
    disabled={false}
    id="myForm"
    intermediate={false}
    label="My input title"
    onChange={[Function]}
  />
</FieldTemplate>
`;

exports[`Toggle field should render disabled input 1`] = `
<FieldTemplate
  description="my text input hint"
  descriptionId="myForm-description"
  errorId="myForm-error"
  errorMessage="My error message"
  isValid={true}
  required={true}
>
  <Toggle
    aria-describedby="myForm-description myForm-error"
    aria-invalid={false}
    aria-required={true}
    checked={true}
    className="switch checkbox"
    disabled={true}
    id="myForm"
    intermediate={false}
    label="My input title"
    onChange={[Function]}
  />
</FieldTemplate>
`;

exports[`Toggle field should render input 1`] = `
<FieldTemplate
  description="my text input hint"
  descriptionId="myForm-description"
  errorId="myForm-error"
  errorMessage="My error message"
  isValid={true}
  required={true}
>
  <Toggle
    aria-describedby="myForm-description myForm-error"
    aria-invalid={false}
    aria-required={true}
    checked={true}
    className="switch checkbox"
    disabled={false}
    id="myForm"
    intermediate={false}
    label="My input title"
    onChange={[Function]}
  />
</FieldTemplate>
`;
